# FeatherDoc

./: .gitattributes  .gitignore  BUILDING_PDF.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LEGAL.md  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASE_ARTIFACT_TEMPLATE.md  RELEASE_ARTIFACT_TEMPLATE.zh-CN.md  VISUAL_VALIDATION.md  VISUAL_VALIDATION.zh-CN.md  VISUAL_VALIDATION_QUICKSTART.md  VISUAL_VALIDATION_QUICKSTART.zh-CN.md
.github/: FUNDING.yml
cli/: featherdoc_cli.cpp  featherdoc_cli_append_table_row_options_parse.cpp  featherdoc_cli_bookmark_block_options_parse.cpp  featherdoc_cli_bookmark_commands.cpp  featherdoc_cli_bookmark_commands.hpp  featherdoc_cli_bookmark_commands_detail.hpp  featherdoc_cli_bookmark_image_commands.cpp  featherdoc_cli_bookmark_image_options_parse.cpp  featherdoc_cli_bookmark_inspect_commands.cpp  featherdoc_cli_bookmark_output.cpp  featherdoc_cli_bookmark_output.hpp  featherdoc_cli_bookmark_paragraph_options_parse.cpp  featherdoc_cli_bookmark_paragraph_replace_options_parse.cpp  featherdoc_cli_bookmark_support.cpp  featherdoc_cli_bookmark_support.hpp  featherdoc_cli_bookmark_table_commands.cpp  featherdoc_cli_bookmark_table_commands.hpp  featherdoc_cli_bookmark_table_options_parse.cpp  featherdoc_cli_bookmark_text_commands.cpp  featherdoc_cli_bookmark_text_fill_options_parse.cpp  featherdoc_cli_bookmark_text_inspect_options_parse.cpp  featherdoc_cli_bookmark_text_options_parse.cpp  featherdoc_cli_bookmark_text_options_parse.hpp  featherdoc_cli_bookmark_text_options_parse_support.cpp  featherdoc_cli_bookmark_text_options_parse_support.hpp  featherdoc_cli_bookmark_text_replace_options_parse.cpp  featherdoc_cli_bookmark_visibility_apply_options_parse.cpp  featherdoc_cli_bookmark_visibility_commands.cpp  featherdoc_cli_bookmark_visibility_commands.hpp  featherdoc_cli_bookmark_visibility_options_parse.cpp  featherdoc_cli_bookmark_visibility_set_options_parse.cpp  featherdoc_cli_command_support.cpp  featherdoc_cli_command_support.hpp  featherdoc_cli_content_control_commands.cpp  featherdoc_cli_content_control_commands.hpp  featherdoc_cli_content_control_form_state_options_parse.cpp  featherdoc_cli_content_control_form_state_options_parse.hpp  featherdoc_cli_content_control_form_state_options_parse_state.cpp  featherdoc_cli_content_control_form_state_options_parse_support.cpp  featherdoc_cli_content_control_form_state_options_parse_support.hpp  (+640 more)
cmake/: FeatherDocCli.cmake  FeatherDocConfig.cmake.in  FeatherDocCopyRuntimeDlls.cmake  FeatherDocFreetype.cmake  FeatherDocPdfThirdParty.cmake  FeatherDocPdfio.cmake  FeatherDocPdfium.cmake  FeatherDocRunPdfiumBuild.cmake  FeatherDocRuntimeDlls.cmake  FeatherDocSamples.cmake
design/: 00-vision.md  01-architecture.md  02-current-roadmap.md  03-long-term-roadmap.md  04-pdf-execution-plan.md  04-pdf-execution-plan_e7_cli_docs_diagnostics.md  04-pdf-execution-plan_e7_cross_page_subtotal_boundaries.md  04-pdf-execution-plan_e7_merge_shaping_rtl.md  04-pdf-execution-plan_e7_repeated_headers_and_subtotals.md  04-pdf-execution-plan_e7_structure_and_table_import.md  05-pdf-rtl-table-cell-complex-task-plan.md  README.md  oxml-subset-coverage.md  pdf-rendering-architecture.md  pdf-rendering-roadmap.md  pdf-rendering-strategy.md  pdfio-byte-writer.md  pdfium-source-build.md  skia-pdf-backend.md  why-not-buy.md  (+2 more)
docs/: conf.py  (+41 more)
test/: CMakeLists.txt  apply_reviewed_style_merge_suggestions_test.ps1  assert_release_material_safety_entry_cases.ps1  assert_release_material_safety_final_review_cases.ps1  assert_release_material_safety_handoff_cases.ps1  assert_release_material_safety_manifest_cases.ps1  assert_release_material_safety_manifest_contract_cases.ps1  assert_release_material_safety_release_blocker_cases.ps1  assert_release_material_safety_release_governance_cases.ps1  assert_release_material_safety_release_summary_body_cases.ps1  assert_release_material_safety_test.ps1  audit_style_merge_restore_plan_test.ps1  basic_document_xml_test_support.hpp  basic_docx_archive_test_support.hpp  basic_image_fixture_test_support.hpp  basic_tests.cpp  body_image_unit_tests.cpp  build_content_control_data_binding_governance_report_test.ps1  build_document_skeleton_governance_report_test.ps1  build_document_skeleton_governance_rollup_report_test.ps1  build_numbering_catalog_governance_report_test.ps1  build_project_template_delivery_readiness_report_test.ps1  build_project_template_onboarding_governance_report_test.ps1  build_project_template_workflow_dashboard_test.ps1  build_release_blocker_rollup_report_edge_scenarios.ps1  build_release_blocker_rollup_report_fixtures.ps1  build_release_blocker_rollup_report_helpers.ps1  build_release_blocker_rollup_report_passing_scenario.ps1  build_release_blocker_rollup_report_test.ps1  build_release_governance_handoff_report_aggregate_scenario.ps1  build_release_governance_handoff_report_basic_scenarios.ps1  build_release_governance_handoff_report_explicit_only_scenario.ps1  build_release_governance_handoff_report_fixtures.ps1  build_release_governance_handoff_report_helpers.ps1  build_release_governance_handoff_report_include_rollup_markdown_assertions.ps1  build_release_governance_handoff_report_include_rollup_rollup_assertions.ps1  build_release_governance_handoff_report_include_rollup_scenario.ps1  build_release_governance_handoff_report_include_rollup_setup.ps1  build_release_governance_handoff_report_include_rollup_summary_assertions.ps1  build_release_governance_handoff_report_informational_actions_scenario.ps1  (+484 more)
test/cmake/: CliCoreCppTests.cmake  CliExecutableCppTests.cmake  CoreCppTests.cmake  CrossPlatformScriptTests.cmake  PdfCppTests.cmake  PdfImportCppTests.cmake  PdfRegressionTests.cmake  TestPostlude.cmake  TestSupport.cmake  WindowsCliDocsScriptTests.cmake  WindowsCliEditTemplateScriptTests.cmake  WindowsCliGovernanceScriptTests.cmake  WindowsCliTemplateRenderScriptTests.cmake  WindowsScriptPdfVisualTests.cmake  WindowsScriptReleaseTests.cmake  WindowsScriptReviewTests.cmake  WindowsScriptVisualSyncTests.cmake
test/install_find_package/: CMakeLists.txt  main.cpp
(+713 files in other folders)
